kubernetes/apps/atlassian-dev/confluence/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: confluence
spec:
  hostnames: ["wikidev.astrateam.net"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: confluence
          namespace: atlassian-dev
          port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /synchrony
      backendRefs:
        - name: confluence-synchrony
          namespace: atlassian-dev
          port: 80
